fixes horizontal scroll

--- a/packages/rocketchat-theme/client/imports/components/header.css
+++ b/packages/rocketchat-theme/client/imports/components/header.css
@@ -9,7 +9,7 @@
 
 	display: flex;
 
-	margin: 0 -0.5rem;
+	margin: 0;
 
 	padding: var(--header-padding);
 
